@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-20T01:36:23Z",
+  "timestamp" : "2022-05-20T08:22:52Z",
   "count_outdated" : 193,
   "uniques_outdated" : 124,
-  "count" : 257,
-  "uniques" : 150,
+  "count" : 262,
+  "uniques" : 154,
   "clones" : [
     {
       "timestamp": "2022-05-06T00:00:00Z",
@@ -46,6 +46,13 @@
       "count_minmax": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-05-20T00:00:00Z",
+      "count": 5,
+      "count_minmax": [ 5, 5 ],
+      "uniques": 4,
+      "uniques_minmax": [ 4, 4 ]
     }
   ]
 }
